# aeqi

./: .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
.observations/: findings-2026-04-04T20-36-21-497Z.json
.sigil/checkpoints/: en-001.json  en-002.json  fa-001.json  fk-006.json  fm-027.json  fm-028.json  fm-029.json  fm-030.json  fm-031.json  fm-032.json  fm-033.json  fm-034.json  fm-035.json  fm-036.json  fv-040.json  fv-041.json  fv-042.json  re-001.json  re-002.json  re-003.json  (+57 more)
agents/: README.md
config/: aeqi.toml  platform.example.toml  realm.toml  sigil.example.toml  sigil.toml  system.toml
crates/aeqi-web/: Cargo.toml
crates/aeqi-web/src/: auth.rs  email.rs  lib.rs  scope.rs  server.rs  session_ws.rs  users.rs  ws.rs
crates/aeqi-web/src/routes/: mod.rs
crates/sigil-orchestrator/: Cargo.toml
crates/sigil-orchestrator/src/: agent_registry.rs  agent_router.rs  agent_worker.rs  audit.rs  blackboard.rs  chat_engine.rs  checkpoint.rs  claude_code.rs  conversation_store.rs  cost_ledger.rs  council.rs  daemon.rs  decomposition.rs  emotional_state.rs  escalation.rs  execution_events.rs  executor.rs  expertise.rs  failure_analysis.rs  familiar.rs  hook.rs  intent.rs  lib.rs  lifecycle.rs  mail.rs  message.rs  molecule.rs  notes.rs  operation.rs  pipeline.rs  preflight.rs  project.rs  reflection.rs  registry.rs  rig.rs  runtime.rs  schedule.rs  session_tracker.rs  supervisor.rs  template.rs  (+7 more)
crates/sigil-orchestrator/src/middleware/: context_budget.rs  cost_tracking.rs  guardrails.rs  loop_detection.rs  mod.rs  safety_net.rs
crates/sigil-web/: Cargo.toml
crates/sigil-web/src/: chat_ws.rs  lib.rs  server.rs  ws.rs
crates/sigil-web/src/routes/: mod.rs
crates/system-companions/: Cargo.toml
crates/system-companions/src/: anime.rs  companion.rs  fusion.rs  gacha.rs  lib.rs  names.rs  relationship.rs  store.rs
crates/system-core/: Cargo.toml
crates/system-core/src/: agent.rs  config.rs  identity.rs  lib.rs  security.rs
crates/system-core/src/traits/: channel.rs  embedder.rs  memory.rs  mod.rs  provider.rs  tool.rs
crates/system-memory/: Cargo.toml
crates/system-memory/src/: chunker.rs  hybrid.rs  lib.rs  sqlite.rs  vector.rs
crates/system-orchestrator/: Cargo.toml
crates/system-orchestrator/src/: agent_router.rs  agent_worker.rs  checkpoint.rs  context_budget.rs  conversation_store.rs  cost_ledger.rs  council.rs  daemon.rs  emotional_state.rs  executor.rs  gap_analysis.rs  heartbeat.rs  hook.rs  lib.rs  lifecycle.rs  message.rs  metrics.rs  operation.rs  pipeline.rs  project.rs  reflection.rs  registry.rs  schedule.rs  session_tracker.rs  supervisor.rs  template.rs  tools.rs
crates/system-providers/: Cargo.toml
crates/system-providers/src/: anthropic.rs  embedder.rs  lib.rs  ollama.rs  openrouter.rs  pricing.rs  reliable.rs
crates/system-tasks/: Cargo.toml
crates/system-tasks/src/: lib.rs  mission.rs  query.rs  store.rs  task.rs
crates/system-tenants/: Cargo.toml
crates/system-tenants/src/: auth.rs  config.rs  economy.rs  email.rs  lib.rs  manager.rs  persona_gen.rs  portrait_gen.rs  project_meta.rs  provision.rs  storage.rs  stripe.rs  tenant.rs
crates/system-tools/: Cargo.toml
crates/system-tools/src/: beads.rs  delegate.rs  file.rs  git.rs  lib.rs  porkbun.rs  shell.rs  skill.rs
crates/system-web/: Cargo.toml
crates/system-web/src/: api_admin.rs  api_chat.rs  api_companion.rs  api_gacha.rs  api_party.rs  api_project.rs  api_stripe.rs  api_user.rs  auth.rs  lib.rs  routes.rs  types.rs  ws.rs
docs/: SIGIL.md  SYSTEM.md  aeiq-template.md  agent-loop-parity.md  architecture.md  claude-code-integration.md  competitive-analysis.md  council.md  domains.md  formulas.md  orchestration-redesign.md  rigs.md  skill-synthesis.md  state-and-direction-2026-03-25.md
indexer/: Cargo.toml
programs/aeqi-budget/: Cargo.toml
programs/aeqi-factory/: Cargo.toml
programs/aeqi-factory/src/: lib.rs
programs/aeqi-fund/: Cargo.toml
programs/aeqi-fund/src/: lib.rs
programs/aeqi-funding/: Cargo.toml
programs/aeqi-funding/src/: lib.rs
programs/aeqi-governance/: Cargo.toml
programs/aeqi-governance/src/: lib.rs
programs/aeqi-role/: Cargo.toml
programs/aeqi-role/src/: errors.rs  lib.rs  state.rs
programs/aeqi-trust/: Cargo.toml
programs/aeqi-trust/src/: lib.rs  state.rs
programs/aeqi-unifutures/: Cargo.toml
programs/aeqi-unifutures/src/: curve.rs  lib.rs
projects/: README.md
projects/aeqi-solana/indexer/: Cargo.toml  README.md
projects/aeqi-solana/indexer/src/: registry.rs
projects/aeqi-solana/programs/aeqi-factory/: Cargo.toml
projects/aeqi-solana/programs/aeqi-factory/src/: state.rs
projects/aeqi-solana/programs/aeqi-token/: Cargo.toml
projects/aeqi-solana/programs/aeqi-treasury/: Cargo.toml
projects/aeqi-solana/programs/aeqi-vesting/: Cargo.toml
projects/entity-legal/contracts/programs/entity-legal/: Cargo.toml
projects/entity-legal/contracts/programs/entity-legal/src/: errors.rs  lib.rs  state.rs
projects/entity-legal/contracts/programs/entity-legal/src/instructions/: create_entity.rs  create_series.rs  mint_security_token.rs  mint_utility_token.rs  mod.rs  register_member.rs  swap_security_to_utility.rs  swap_utility_to_security.rs  vote.rs
rm/: Cargo.toml
rm/src/: main.rs
scripts/: check-recall.sh  check-recall.sh.real  deploy.sh  graph-index-hook.sh  install.sh  mark-recall.sh  post-commit
sg/: Cargo.toml
sg/src/: main.rs
sigil-cli/: Cargo.toml
sigil-cli/src/: cli.rs  helpers.rs  main.rs
sigil-cli/src/cmd/: agent.rs  blackboard.rs  chat.rs  config.rs  cron.rs  daemon.rs  deps.rs  doctor.rs  graph.rs  init.rs  mcp.rs  mod.rs  monitor.rs  operation.rs  pipeline.rs  run.rs  secrets.rs  setup.rs  skill.rs  status.rs  tasks.rs  team.rs  trigger.rs
sigil-cli/src/tui/: markdown.rs  mod.rs  render.rs  state.rs
site/: index.html
tests/: aeqi-end-to-end.ts  aeqi-factory.ts  aeqi-fund.ts  aeqi-funding.ts  aeqi-governance.ts  aeqi-role.ts  aeqi-token.ts  aeqi-treasury.ts  aeqi-trust.ts  aeqi-unifutures.ts  aeqi-vesting.ts
(+523 files in other folders)
