[workspace]
resolver = "2"
members = [
    "rm",
    "crates/system-core",
    "crates/system-tasks",
    "crates/system-providers",
    "crates/system-tools",
    "crates/system-orchestrator",
    "crates/system-memory",
    "crates/system-gates",
    "crates/system-companions",
    "crates/system-tenants",
    "crates/system-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["AlgoStaking"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"

# Crypto
chacha20poly1305 = "0.10"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"

# TOTP
totp-rs = { version = "5", features = ["qr"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "hostname", "smtp-transport"] }

# Hex encoding
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Dirs
dirs = "6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Tokio stream
tokio-stream = "0.1"
futures = "0.3"

# Test
tempfile = "3"

# Internal crates
system-tasks = { path = "crates/system-tasks" }
system-core = { path = "crates/system-core" }
system-providers = { path = "crates/system-providers" }
system-tools = { path = "crates/system-tools" }
system-orchestrator = { path = "crates/system-orchestrator" }
system-memory = { path = "crates/system-memory" }
system-gates = { path = "crates/system-gates" }
system-companions = { path = "crates/system-companions" }
system-tenants = { path = "crates/system-tenants" }
system-web = { path = "crates/system-web" }

[profile.release]
lto = true
codegen-units = 1
strip = true
