[workspace]
resolver = "2"
members = [
    "sigil-cli",
    "crates/sigil-core",
    "crates/sigil-tasks",
    "crates/sigil-providers",
    "crates/sigil-tools",
    "crates/sigil-orchestrator",
    "crates/sigil-memory",
    "crates/sigil-gates",
    "crates/sigil-web",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Sigil Contributors"]
description = "Recursive multi-agent orchestration framework"
repository = "https://github.com/0xAEQI/sigil"
homepage = "https://github.com/0xAEQI/sigil"
categories = ["development-tools", "command-line-utilities"]
keywords = ["agents", "orchestration", "llm", "claude", "automation"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tower = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
jsonwebtoken = "9"

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async traits
async-trait = "0.1"

# Crypto
chacha20poly1305 = "0.10"
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# SQLite
rusqlite = { version = "0.32", features = ["bundled"] }

# Dirs
dirs = "6"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Tokio stream
tokio-stream = "0.1"
futures = "0.3"

# Test
tempfile = "3"

# Internal crates
sigil-tasks = { path = "crates/sigil-tasks" }
sigil-core = { path = "crates/sigil-core" }
sigil-providers = { path = "crates/sigil-providers" }
sigil-tools = { path = "crates/sigil-tools" }
sigil-orchestrator = { path = "crates/sigil-orchestrator" }
sigil-memory = { path = "crates/sigil-memory" }
sigil-gates = { path = "crates/sigil-gates" }
sigil-web = { path = "crates/sigil-web" }


[profile.release]
lto = true
codegen-units = 1
strip = true
