[workspace]
resolver = "2"
members = [
    "programs/aeqi-trust",
    "programs/aeqi-factory",
    "programs/aeqi-role",
    "programs/aeqi-governance",
    "programs/aeqi-token",
    "programs/aeqi-treasury",
    "programs/aeqi-vesting",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["aeqi"]

[workspace.dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
