[package]
name = "rm"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rm"
path = "src/main.rs"

[dependencies]
system-core = { workspace = true }
system-tasks = { workspace = true }
system-providers = { workspace = true }
system-tools = { workspace = true }
system-orchestrator = { workspace = true }
system-gates = { workspace = true }
system-memory = { workspace = true }
system-companions = { workspace = true }
system-tenants = { workspace = true }
system-web = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
