[package]
name = "sg"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sg"
path = "src/main.rs"

[dependencies]
sigil-core = { workspace = true }
sigil-beads = { workspace = true }
sigil-providers = { workspace = true }
sigil-tools = { workspace = true }
sigil-orchestrator = { workspace = true }
sigil-memory = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
