[package]
name = "sigil"
version.workspace = true
edition.workspace = true
description = "CLI, daemon, and web entrypoint for the Sigil agent runtime"

[[bin]]
name = "sigil"
path = "src/main.rs"

[dependencies]
sigil-core = { workspace = true }
sigil-tasks = { workspace = true }
sigil-providers = { workspace = true }
sigil-tools = { workspace = true }
sigil-orchestrator = { workspace = true }
sigil-gates = { workspace = true }
sigil-memory = { workspace = true }
sigil-web = { workspace = true }
sigil-graph = { workspace = true }

tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tungstenite = { workspace = true }
pulldown-cmark = { workspace = true }
syntect = { workspace = true }
similar = { workspace = true }
