[package]
name = "aeqi-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API and WebSocket server for AEQI orchestration"

[features]
default = ["embed-ui"]
embed-ui = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
aeqi-core = { workspace = true }

tokio = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
base64 = { workspace = true }

# Auth
rusqlite = { workspace = true }
argon2 = "0.5"
urlencoding = "2"

# Optional: embedded UI assets
rust-embed = { workspace = true, optional = true }
mime_guess = { workspace = true, optional = true }
