[package]
name = "sigil-orchestrator"
version.workspace = true
edition.workspace = true

[dependencies]
sigil-core = { workspace = true }
sigil-beads = { workspace = true }
sigil-providers = { workspace = true }
sigil-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
