[package]
name = "sigil-orchestrator"
version.workspace = true
edition.workspace = true
description = "Agent orchestration engine — supervisor, workers, chat, dispatch, and daemon"

[dependencies]
sigil-core = { workspace = true }
sigil-memory = { workspace = true }
sigil-tasks = { workspace = true }
sigil-providers = { workspace = true }
sigil-tools = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
