[package]
name = "sigil-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API and WebSocket server for Sigil orchestration"

[dependencies]
sigil-core = { workspace = true }

tokio = { workspace = true }
tower = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
jsonwebtoken = { workspace = true }
