[package]
name = "system-companions"
version.workspace = true
edition.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
system-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rusqlite = { workspace = true }
rand = { workspace = true }
