[package]
name = "system-providers"
version.workspace = true
edition.workspace = true

[dependencies]
system-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
