[package]
name = "system-tasks"
version.workspace = true
edition.workspace = true

[dev-dependencies]
tempfile = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
