[package]
name = "system-tools"
version.workspace = true
edition.workspace = true

[dependencies]
system-core = { workspace = true }
system-tasks = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
