[package]
name = "aeqi-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AEQI Governance module — proposals, voting (token + per-role multisig)"

[lib]
crate-type = ["cdylib", "lib"]
name = "aeqi_governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
