[package]
name = "aeqi-unifutures"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AEQI Unifutures — bonding curves, commitment sales, exits"

[lib]
crate-type = ["cdylib", "lib"]
name = "aeqi_unifutures"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022"] }
