[package]
name = "aeqi-vesting"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AEQI Vesting module — linear cliff vesting positions for equity grants"

[lib]
crate-type = ["cdylib", "lib"]
name = "aeqi_vesting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022"] }
