[package]
name = "entity-legal"
version = "0.1.0"
description = "Solana cap table program for entity.legal — Marshall Islands DAO LLC with two-token model, series LLC, and governance"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "entity_legal"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30", features = ["init-if-needed"] }
anchor-spl = { version = "0.30", features = ["token-2022"] }
spl-token-2022 = { version = "3.0", features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.7"
